--- a/index.html
+++ b/index.html
@@ -70,17 +70,19 @@
 
 	  		<div class="row">
 			    <form class="col s12">
-			      <div class="row">
-			        <div class="input-field col s3">
-			          	<input id="name" type="text" placeholder="Full Name" class="validate" required="" aria-required="true">
-			        </div>
-			        <div class="input-field col s6">
-			          	<input id="contact" type="text" placeholder="Email or phone" class="validate" required="" aria-required="true">
-			        </div>
-			        <div class="input-field col s3">
-			          	<input id="location" type="text" placeholder="e.g. NHS Room 1234" class="validate" required="" aria-required="true">
-			        </div>
-			      </div>
+					<div class="row">
+				        <div class="input-field col s6">
+				          	<input id="name" type="text" placeholder="Full Name" class="validate" required="" aria-required="true">
+				        </div>
+				        <div class="input-field col s6">
+				          	<input id="contact" type="text" placeholder="Contact Info" class="validate" required="" aria-required="true">
+				        </div>
+					</div>
+					<div class="row">
+				        <div class="input-field col s12">
+				          	<input id="location" type="text" placeholder="Location - e.g. NHS Room 1234" class="validate" required="" aria-required="true">
+				        </div>
+					</div>
 			    </form>
 		  	</div>
 			
